[gd_scene load_steps=7 format=3 uid="uid://b8mbax84wx8ox"]

[ext_resource type="Theme" uid="uid://d4lygjei3ld2f" path="res://themes/gothic_scenario.tres" id="1_hdk53"]
[ext_resource type="Texture2D" uid="uid://xfdxiguvvmub" path="res://scenarios/leipzig/lane/Lane-SD.jpg" id="2_cxob3"]
[ext_resource type="PackedScene" uid="uid://bdtq7xo1dfigb" path="res://scenarios/aa_instanced_scenes/FadePanel.tscn" id="3_4mbo8"]
[ext_resource type="Script" path="res://scenarios/leipzig/lane/Lane.gd" id="3_xcy5v"]
[ext_resource type="PackedScene" uid="uid://d3bii8k8584d" path="res://scenarios/aa_instanced_scenes/TextBox.tscn" id="4_5llu5"]
[ext_resource type="PackedScene" uid="uid://dna4je6f4puhp" path="res://scenarios/aa_instanced_scenes/Audio.tscn" id="6_mkjwa"]

[node name="Lane" type="TextureRect"]
offset_left = 40.0
offset_top = 40.0
offset_right = 1560.0
offset_bottom = 1040.0
theme = ExtResource("1_hdk53")
texture = ExtResource("2_cxob3")
script = ExtResource("3_xcy5v")

[node name="FadePanel" parent="." instance=ExtResource("3_4mbo8")]
visible = false
layout_mode = 0

[node name="TextBox" parent="." instance=ExtResource("4_5llu5")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 1210.0
offset_bottom = 178.0

[node name="Time" type="Label" parent="TextBox"]
layout_mode = 2

[node name="Intro" type="Label" parent="TextBox"]
custom_minimum_size = Vector2(1200, 10)
layout_mode = 2
text = "You are in laneway. You decide to..."
autowrap_mode = 2

[node name="Options" type="VBoxContainer" parent="TextBox"]
layout_mode = 2

[node name="MainSt" type="Button" parent="TextBox/Options"]
layout_mode = 2
text = "...walk back to the main street."
flat = true
alignment = 0

[node name="SideSt" type="Button" parent="TextBox/Options"]
layout_mode = 2
text = "...continue on to a side street."
flat = true
alignment = 0

[node name="Outcome" type="Label" parent="TextBox"]
visible = false
custom_minimum_size = Vector2(1200, 10)
layout_mode = 2
autowrap_mode = 2

[node name="Audio" parent="." instance=ExtResource("6_mkjwa")]

[connection signal="pressed" from="TextBox/Options/MainSt" to="." method="_on_main_st_pressed"]
[connection signal="pressed" from="TextBox/Options/SideSt" to="." method="_on_side_st_pressed"]
